<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_porudzbina_sifra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/sifra"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_porudzbina_kupac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="Kupac"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_porudzbina_adresa_kupca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/adresa_kupca"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_porudzbina_cena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/cena"
        android:textSize="24sp" />


</LinearLayout>