<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RecenzijaDetaljnoFinal">

    <LinearLayout
        android:id="@+id/zavrsi_kupovinu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/recenzija_detaljno_toolbar"/>

        <TextView
            android:inputType="none"
            android:id="@+id/et_adresa_kupca_recenzija"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/adresa_kupca"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:inputType="none"
            android:id="@+id/et_ukupna_cena_recenzija"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/ukupna_cena"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_komentar_recenzija"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/komentar"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/et_ocena_recenzija"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/ocena"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cb_ostani_anoniman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ostani_anoniman"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lista_artikala_za_recenziju_detaljno"
            android:orientation="vertical">

            <ListView
                android:id="@+id/lv_artikli_za_recenziju_detaljno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

            </ListView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>