<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context=".ArtikalEdit">


    <ImageView
        android:layout_width="370dp"
        android:layout_height="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/iv_edit_artikla"
        app:srcCompat="@drawable/ic_launcher_background" />

    <EditText
        android:id="@+id/et_artikal_naziv_edit"
        android:layout_width="385dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/naziv"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_artikal_opis_edit"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/opis_artikla" />

    <EditText
        android:id="@+id/et_cena_artikla_edit"
        android:layout_width="89dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/cena"
        android:inputType="number"/>

    <Button
        android:id="@+id/btn_sacuvaj_izmene"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="10dp"
        android:gravity="center_horizontal"
        android:layout_gravity="bottom"
        android:text="sacuvaj izmene" />

</LinearLayout>

